// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About 1`] = `
<div>
  <h1>
    About us :-)
  </h1>
</div>
`;

exports[`Home 1`] = `
<div>
  <h1>
    Welcome!
  </h1>
</div>
`;

exports[`NotFound 1`] = `
<div>
  <h1>
    ERROR 404 :-(
  </h1>
</div>
`;
